<resources>
    <string name="app_name">Maarnaol</string>
    <string name="lang">Language</string>
    <string name="menu">Menu:</string>
    <string name="welcome_1">MAARNAOL meditations from Gabor Pete.</string>
    <string name="welcome_2">I recommend these exercises to those who want real experiences and want to get the maximum of their minds, furthermore, to those who would like to get rid of their anxiety and stress.</string>
    <string name="welcome_3">Start the meditation and follow the instructions. Practice every day and get to know the world in a way you have not experienced before, to improve your mental and emotional abilities.</string>
    <string name="welcome_4">I wish you a pleasant and useful exercise!</string>
    <string name="marnaaol_desc">Maarnaol description</string>
    <string name="desc_text">Welcome to the world of MAARNAOL meditations! Join me and discover the special MAARNAOL meditation technique, by the practice of which you will get to an altered state of consciousness by which your mind becomes capable of free, unlimited and intuitive perception and learning. The progress that can be made this way will greatly expand your intellectual boundaries. MAARNAOL meditation will open a new world for you and will have a dramatically positive impact on your learning ability, logical thinking, spiritual development, furthermore, your other mental and emotional qualities. Practicing MAARNAOL meditations will bring a lot of other beneficial effects to you, as well. It enhances your concentration ability, increases your creativity, strengthens your immune system, increases the number of neural connections in the brain, thereby improving your memory and other cognitive abilities. Furthermore, it cures the fear of flight, height and it greatly relieves stress and anxiety. So with the right practice, you can become a much more advanced, conscious and healthy person. Useful information: • The “Stand up” meditation is available free of charge after downloading the application. The other seven meditations will become available once the one-time fee is paid. • The meditations are listed in order of difficulty. It is important to ensure that you go through the various types of meditation in the order listed, because you will be able to complete them successfully only in this way. • The implementation of the series of exercises requires a lot of concentration and attention, so it is very important that you start to meditate after having a short relax, at least 1 hour after meal, in a comfortable and mainly calm environment. • Before practicing, prepare a comfortable blanket or yoga mat on the floor to feel comfortable during the meditation. • If you think the time is too short to complete a particular exercise, stop it and start it again later on. • During the exercise, it may happen that you cannot reach the altered state of consciousness at first, but if you practice diligently, you will eventually succeed and you will not only develop but also become richer with a fantastic experience. • If you do not reach the altered state of consciousness even after repeated attempts during meditation, don’t worry, you just need some more relaxation. Relax for a few minutes and then, if you feel ready, repeat the exercise. • Contact: contact@maarnaol.com</string>
    <string name="contact">Contact</string>
    <string name="contactdesc">www.maarnaol.com</string>
</resources>
