<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        tools:context=".playlist.PlayListActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/backgroundBlue"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:elevation="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="MAARNAOL Meditations"
                android:textColor="@color/creme"
                android:textSize="25dp" />

            <ImageView
                android:id="@+id/img_menu"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/bg_circle"
                android:padding="5dp"
                android:src="@drawable/ic_menu_white_24dp" />


        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/creme"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/welcome_1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:text="@string/welcome_2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:text="@string/welcome_3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:text="@string/welcome_4" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gold_bgr"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/list0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="15dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:padding="5dp"
                            android:src="@drawable/ic_playlist_play" />

                        <LinearLayout
                            android:layout_width="190dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Free - Relax"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Straight out the gate"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="'10.02"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:padding="15dp">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:padding="5dp"
                                android:src="@drawable/ic_playlist_play_gray" />

                            <LinearLayout
                                android:layout_width="190dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Deep - Relax"
                                    android:textColor="@color/grey" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Over there"
                                    android:textColor="@color/grey" />

                            </LinearLayout>

                            <TextView

                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="'14.08"
                                android:textColor="@color/grey" />

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginRight="10dp"
                                android:src="@drawable/ic_lock_gray" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:padding="15dp">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:padding="5dp"
                                android:src="@drawable/ic_playlist_play_gray" />

                            <LinearLayout
                                android:layout_width="190dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Smart - Relax"
                                    android:textColor="@color/grey" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Travel with me"
                                    android:textColor="@color/grey" />

                            </LinearLayout>

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="'7:34"
                                android:textColor="@color/grey" />

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginLeft="30dp"
                                android:layout_marginRight="10dp"
                                android:src="@drawable/ic_lock_gray" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:padding="15dp">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:padding="5dp"
                                android:src="@drawable/ic_playlist_play_gray" />

                            <LinearLayout
                                android:layout_width="190dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="White - Relax"
                                    android:textColor="@color/grey" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="See the sky"
                                    android:textColor="@color/grey" />

                            </LinearLayout>

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="'09:56"
                                android:textColor="@color/grey" />


                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginLeft="30dp"
                                android:layout_marginRight="10dp"
                                android:src="@drawable/ic_lock_gray" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:padding="15dp">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:padding="5dp"
                                android:src="@drawable/ic_playlist_play_gray" />

                            <LinearLayout
                                android:layout_width="190dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Fresh - Relax"
                                    android:textColor="@color/grey" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Move your body"
                                    android:textColor="@color/grey" />

                            </LinearLayout>

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="'12.41"
                                android:textColor="@color/grey" />


                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginLeft="30dp"
                                android:layout_marginRight="10dp"
                                android:src="@drawable/ic_lock_gray" />

                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</layout>